server/eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server-deployment
  labels:
    app: app-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-server
  template:
    metadata:
      labels:
        app: app-server
    spec:
      containers:
        - name: app-server
          image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/<AWS_ECR_REPOSITORY>:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
