server/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server-service
spec:
  type: ClusterIP
  selector:
    app: app-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 3000
